-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0
-
None
-
-
a43ca591c (dev), ce58c4180 (6.5), b44dcfa1e (6.5.1)
1. Build and Run attacked example with Qt 6.5.0
2. Fold out the combobox.
3. Click anywhere on the dialog - notice that the combobox popup does not close (also when clicking the popup button)
4. Do the same with Qt 6.4.3 - it works there (hence it is a regression)
For Gerrit Dashboard: QTBUG-113311 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
475052,8 | Fix hiding in QComboBox when there is no selection | dev | qt/qtbase | Status: MERGED | +2 | 0 |
476062,2 | Fix hiding in QComboBox when there is no selection | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
476107,2 | Fix hiding in QComboBox when there is no selection | 6.5.1 | qt/qtbase | Status: MERGED | +2 | 0 |