src/widgets/widgets/qcombobox.cpp
@@ -2807,31 +2807,30 @@ void QComboBox::hidePopup()
         return;
 
 #if QT_CONFIG(effects)
-    // Flash selected/triggered item (if any).
-    if (style()->styleHint(QStyle::SH_Menu_FlashTriggeredItem)) {
-        QItemSelectionModel *selectionModel = d->container->itemView()
-                                            ? d->container->itemView()->selectionModel() : nullptr;
-        if (selectionModel && selectionModel->hasSelection()) {
-            const QItemSelection selection = selectionModel->selection();
+    QItemSelectionModel *selectionModel = d->container->itemView()
+                                        ? d->container->itemView()->selectionModel() : nullptr;
+    // Flash selected/triggered item (if any) before hiding the popup.
+    if (style()->styleHint(QStyle::SH_Menu_FlashTriggeredItem) &&
+        selectionModel && selectionModel->hasSelection()) {
+        const QItemSelection selection = selectionModel->selection();
 
-            QTimer::singleShot(0, d->container, [d, selection, selectionModel]{
+        QTimer::singleShot(0, d->container, [d, selection, selectionModel]{
+            QSignalBlocker modelBlocker(d->model);
+            QSignalBlocker viewBlocker(d->container->itemView());
+            QSignalBlocker containerBlocker(d->container);
+
+            // Deselect item and wait 60 ms.
+            selectionModel->select(selection, QItemSelectionModel::Toggle);
+            QTimer::singleShot(60, d->container, [d, selection, selectionModel]{
                 QSignalBlocker modelBlocker(d->model);
                 QSignalBlocker viewBlocker(d->container->itemView());
                 QSignalBlocker containerBlocker(d->container);
-
-                // Deselect item and wait 60 ms.
                 selectionModel->select(selection, QItemSelectionModel::Toggle);
-                QTimer::singleShot(60, d->container, [d, selection, selectionModel]{
-                    QSignalBlocker modelBlocker(d->model);
-                    QSignalBlocker viewBlocker(d->container->itemView());
-                    QSignalBlocker containerBlocker(d->container);
-                    selectionModel->select(selection, QItemSelectionModel::Toggle);
-                    QTimer::singleShot(20, d->container, [d] {
-                        d->doHidePopup();
-                    });
+                QTimer::singleShot(20, d->container, [d] {
+                    d->doHidePopup();
                 });
             });
-        }
+        });
     } else
 #endif // QT_CONFIG(effects)
     {
